--- a/src/main/resources/templates/board/distributor/distributor-board-list.html
+++ b/src/main/resources/templates/board/distributor/distributor-board-list.html
@@ -17,7 +17,7 @@
                 <div class="header"></div>
                 <div class="board-container">
                     <section class="board-section">
-                        <div>
+                        <div style="margin-right: 4rem;">
                             <section class="board-header">
                                 <h1 class="board-header-title">게시판</h1>
                                 <div>
