--- a/src/main/resources/templates/member/account-management.html
+++ b/src/main/resources/templates/member/account-management.html
@@ -32,7 +32,7 @@
                             <a href="#" class="go-to-modfiy-page">
                                 <div class="management-account-box">
                                     <span class="management-account-title">비밀번호</span>
-                                    <span class="management-account-value">•••••••</span>
+                                    <span class="management-account-value"></span>
                                 </div>
                                 <div class="management-arrow-box">
                                     <img src="/static/image/arrow-icon.png">
