--- a/src/main/resources/templates/distributor/distributor-management.html
+++ b/src/main/resources/templates/distributor/distributor-management.html
@@ -6,102 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/mypage/account-mangement.css">
+    <link rel="stylesheet" href="/static/css/mypage/distributor/distributor-management.css">
     <title>업체 - 업체정보관리</title>
-    <style>
-        .management-content-title-box {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 12px;
-            color: #737373;
-            font-size: 14px;
-        }
-
-        .management-modify-button {
-            display: inline-block;
-            text-align: center;
-            border-width: 1px;
-            border-style: solid;
-            border-color: transparent;
-            background-color: transparent;
-            border-radius: 4px;
-            width: initial;
-            padding: 0;
-            color: #00C7AE;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-        }
-
-        .management-value-box {
-            padding-bottom: 12px;
-            border-bottom: 1px solid #F2F2F2;
-            font-size: 16px;
-        }
-
-        .management-value {
-            display: -webkit-box;
-            max-height: 1.5em;
-            line-height: 1.5;
-            -webkit-line-clamp: 1;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            word-break: break-all;
-        }
-
-        .management-input {
-            width: 100%;
-            border: none;
-            padding: 0;
-            outline: none;
-        }
-
-        .management-button-box {
-            display: flex;
-            justify-content: flex-end;
-            gap: 16px;
-            margin-top: 24px;
-        }
-
-        .cancel-button {
-            display: inline-block;
-            text-align: center;
-            border-width: 1px;
-            border-style: solid;
-            cursor: pointer;
-            user-select: none;
-            border-color: rgb(225, 225, 225);
-            background-color: transparent;
-            padding: 8px 0px;
-            width: 120px;
-            font-size: 14px;
-            font-weight: 500;
-            border-radius: 6px;
-            color: rgb(50, 50, 50);
-        }
-
-        .accept-button {
-            display: inline-block;
-            text-align: center;
-            cursor: pointer;
-            user-select: none;
-            transition-property: color, border-color, background-color;
-            transition-duration: 0.15s;
-            transition-timing-function: ease-in-out;
-            padding: 8px 0px;
-            width: 120px;
-            font-size: 14px;
-            font-weight: 500;
-            border-radius: 6px;
-            border: none;
-            background-color: rgb(181, 181, 181);
-            color: rgb(255, 255, 255);
-        }
-
-        .management-li {
-            margin-bottom: 1.3rem;
-        }
-    </style>
 </head>
 <body>
      <div class="box">
@@ -153,6 +59,20 @@
                                 <button type="button" class="cancel-button">취소</button>
                                 <button type="button" class="accept-button">수정하기</button>
                             </div> -->
+                        </li>
+                        <li class="management-li">
+                            <div class="management-content-title-box">
+                                업체 소개글
+                                <button type="button" class="management-modify-button">수정</button>
+                            </div>
+                            <div class="management-value-box">
+                                <p class="management-value">X</p>
+                                <textarea placeholder="소개글을 작성해주세요." rows="5" class="distributor-introduce"></textarea>
+                            </div>
+                            <div class="management-button-box">
+                                <button type="button" class="cancel-button">취소</button>
+                                <button type="button" class="accept-button">수정하기</button>
+                            </div>
                         </li>
                     </ul>
                 </div>
