--- a/src/main/resources/templates/distributor/distributor-portfolio.html
+++ b/src/main/resources/templates/distributor/distributor-portfolio.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/mypage/distributor/distributor-portfolio.css">
     <title>업체- 포트폴리오</title>
 </head>
 <body>
-    
+    <div class="box">
+        <div class="container">
+            <div class="portfolio-box">
+                <div id="header"></div>
+                <div class="portfolio-container">
+                    <div class="portfolio-modify-button-box">
+                        <h1 class="portfolio-title">포트폴리오 관리</h1>
+                        <button type="button" class="portfolio-modify-button">수정</button>
+                    </div>
+                    <ul>
+                        <li class="portfolio-li">
+                            <div class="portfolio-image-box">
+                                <img src="/static/image/t_3d27c205-0606-49cf-9835-23e4cc5ee1dc_original.jpg">
+                            </div>
+                        </li>
+                    </ul>
+                     <!-- 모달창 -->
+                     <div class="portfolio-modfiy-modal-box modal-active">
+                        <div class="portfolio-modify-modal-container">
+                            <div class="portfolio-modify-modal-content-box">
+                                <div class="portfolio-modify-modal-content-container">
+                                    <h4 class="portfolio-modify-modal-title">포트폴리오 사진 등록</h4>
+                                    <div class="register-image-box">
+                                        <ul class="register-image-ul">
+                                            <li class="register-image-li">
+                                                <div class="register-image">
+                                                    <img src="/static/image/cancel-circle.png" class="cancel-circle">
+                                                    <img src="/static/image/t_3d27c205-0606-49cf-9835-23e4cc5ee1dc_original.jpg"class="register-image">
+                                                </div>
+                                            </li>
+                                            
+                                        </ul>
+                                    </div>
+                                    <div class="portfolio-modify-modal-button-box">
+                                        <label class="portfolio-input-box">
+                                            사진 등록하기
+                                            <input type="file">
+                                        </label>
+                                        <button class="portfolio-modify-cancel-button">취소</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portfolio-modify-modal-background"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
