html - chat-list

--- a/src/main/resources/templates/chat/chat-list.html
+++ b/src/main/resources/templates/chat/chat-list.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/mypage/chat/chat-list.css">
     <title>채팅</title>
 </head>
 <body>
-    
+    <div class="box">
+        <div class="container">
+            <div class="chat-list-box">
+                <div id="header"></div>
+
+                <div class="chat-list-header-box">
+                    <div class="chat-list-container">
+                        <section class="chat-list-title-box">
+                            <h3 class="chat-list-title">채팅</h3>
+                        </section>
+                        <section class="chat-list-info-box">
+                            <div class="chat-search-box">
+                                <div class="chat-serach-input-group">
+                                    <div class="search-icon-box">
+                                        <img src="/static/image/serach-icon.png" class="search-icon">
+                                    </div>
+                                    <div class="search-input-box">
+                                        <input type="text" placeholder="유통업체명을 검색하세요." class="search-input">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="chat-list-menu-box">
+                                <div class="chat-list-menu-container">
+                                    <ul class="chat-list-menu-ul">
+                                        <li class="chat-list-menu select">전체</li>
+                                        <li class="chat-list-menu">안 읽음</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="chat-list-content-box">
+                    <div class="chat-list-container">
+                        <div class="chat-list-content-container">
+                            <ul class="chat-content-ul">
+                                <li class="chat-content-li">
+                                    <a href="#">
+                                        <div class="chat-content-box">
+                                            <div clas="chat-content-profile-box">
+                                                <img src="/static/image/t_3d27c205-0606-49cf-9835-23e4cc5ee1dc_original.jpg" class="chat-profile">
+                                            </div>
+                                            <div class="sender-info-box">
+                                                <div class="sender-name-box">
+                                                    <h4 class="sender-name">이름입</h4>
+                                                    <p class="chat-content"> 내용입니다 내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다내용입니다</p>
+                                                </div>
+                                                <div class="send-time-box">
+                                                    <p>2시간전</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="no-chat-list-box">
+                            <article class="no-chat-list-container">
+                                <div class="no-chat-image-box">
+                                    <img src="/static/image/no-chat-icon.png" class="no-chat-icon">
+                                </div>
+                                <h3>메시지가 없습니다</h3>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
