--- a/src/main/resources/static/css/mypage/distributor/distributor-management.css
+++ b/src/main/resources/static/css/mypage/distributor/distributor-management.css
@@ -103,6 +103,53 @@
     overflow: auto;
 }
 
+.management-address-box {
+    display: flex;
+    justify-content: space-around;
+}
+
+.address-input {
+    flex: 1;
+    background: none;
+}
+
+.address-button {
+    display: inline-block;
+    text-align: center;
+    border-width: 1px;
+    border-style: solid;
+    cursor: pointer;
+    user-select: none;
+    padding : 3px 0;
+    border-color: rgb(225, 225, 225);
+    background-color: transparent;
+    width: 100px;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 6px;
+    color: rgb(50, 50, 50);
+}
+
+.management-time-box {
+    display: flex;
+    justify-content: space-around;
+}
+
+.select-box {
+    position : relative;
+    width: 100px;
+    height: 30px;
+    background-color: bisque;
+    border : none;
+    border-radius: 8px;
+    text-align: center;
+    outline: none;
+}
+
+.management-time-box {
+    margin-top: 1.5rem;
+}
+
 .distributor-introduce::-webkit-scrollbar {
     width: 1px;
 }
