--- a/src/main/resources/templates/distributor/account-modify.html
+++ b/src/main/resources/templates/distributor/account-modify.html
@@ -72,6 +72,14 @@
                     <ul class="account-menu-ul">
                         <li class="account-menu-li">
                             <a href="#" >
+                                기본 정보 관리
+                                <div class="account-arrow-box">
+                                    <img src="/static/image/arrow-icon.png">
+                                </div>
+                            </a>
+                        </li>
+                        <li class="account-menu-li">
+                            <a href="#" >
                                 업체 정보 관리
                                 <div class="account-arrow-box">
                                     <img src="/static/image/arrow-icon.png">
